--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p></p>
 	</div>
 	<div id = "video">
-		<h3> Here is an embedded  music video from YouTube which is Animals by Martin Garrix.</h3>
-		<iframe width="700" height="480" src="https://www.youtube.com/embed/gCYcHz2k5x0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h3> Here is an embedded  music video Animals by Martin Garrix.</h3>
+		<iframe src="https://player.vimeo.com/video/85445835" width="700" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 	</div>	
 </body>
