--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 		<p>Hey world, I am Debanjan Paul. I just made this website using HTML and CSS script. I started from scratch and here I have made this website. Thank you for looking at this website and it will be updated soon.
 		</p>
 		<p>
-			The following is the link to <b><a href = "http://www.onemonth.com/">Made @ One Month</a></b>. Make sure to check it out.
+			The following is the link to <b><a href = "http://www.onemonth.com/" target="blank">Made @ One Month</a></b>. Make sure to check it out.
 		</p>
 	</div>
 	<div id = "blank2">
 		<p></p>
 	</div>
 	<div id = "video">
-		<h3> Here is an embedded  music video from YouTube which is Animals by Martin Garrix.</h3>
-		<iframe width="700" height="480" src="https://www.youtube.com/embed/gCYcHz2k5x0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h3> Here is an embedded  music video Animals by Martin Garrix.</h3>
+		<iframe src="https://player.vimeo.com/video/85445835" width="700" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 	</div>	
 </body>
